Fix word wrap for long single word

--- a/app/assets/stylesheets/chat_channels_messages.scss
+++ b/app/assets/stylesheets/chat_channels_messages.scss
@@ -165,6 +165,7 @@
 
 .channel-msg-body {
   line-height: 1.2em;
+  overflow-wrap: anywhere;
 }
 
 .channel-msg-header {
